--- a/research/kuramoto/talk.html
+++ b/research/kuramoto/talk.html
@@ -7,13 +7,17 @@ title: DAG decomposition
     <H1>Direct acyclic decomposition of Kuramoto equations</H1>
 
     <p>Tianran Chen</p>
+    <p>Department of Mathematics and Computer Science</p>
     <p>Auburn University at Montgomery</p>
 </section>
 <section>
-    Synchronization equations:
+    <img src="../kuramoto.png" border=5 class="stretch">
+    <p>
     \[
-        \omega_i - \sum_{j=1}^n k_{ij} \sin(\theta_i - \theta_j)
+        \dot{\theta} = \omega_i - \sum_{j=1}^n k_{ij} \sin(\theta_i - \theta_j)
     \]
+    </p>
+
 </section>
 <section>
     <div id="sketch-holder">  </div>
@@ -22,4 +26,141 @@ title: DAG decomposition
     <script language="javascript" type="text/javascript" src="/js/p5.min.js"></script>
     <script language="javascript" type="text/javascript" src="/js/p5.dom.js"></script>
     <script language="javascript" type="text/javascript" src="/js/kuramoto.js"></script>
+</section>
+<section>
+    <p>
+    Frequency synchronization configuration:
+    </p>
+    <p>
+    $\dot{\theta}_i$ are all identical.
+    </p>
+    <p class="fragment">
+    \[
+        c = \omega_i - \sum_{j=1}^n k_{ij} \sin(\theta_i - \theta_j)
+    \]
+    </p>
+
+    <p class="fragment">
+        ... they are equivalent to critical points defined by
+    \[
+        0 = \omega_i - \sum_{j=1}^n k_{ij} \sin(\theta_i - \theta_j)
+    \]
+    </p>
+</section>
+<section>
+    <p>Consider complex phase angles</p>
+    
+    <p>
+    \[
+        \theta_i \;\mapsto\;
+        z_i = \theta_i - \mathbf{i}\, r_i
+    \]
+    </p>
+
+    <p class="fragment">
+        and the change of variables
+        \[
+            x_i = e^{\mathbf{i} z_i} = e^{r_i + \mathbf{i}\,\theta_i}
+        \]
+    </p>
+    <p></p>
+    <p class="fragment">
+        \[
+            \sin(z_i - z_j) = \frac{
+                e^{\mathbf{i}z_i - \mathbf{i}z_j} -
+                e^{\mathbf{i}z_j - \mathbf{i}z_i}
+            }{2\mathbf{i}}
+            =
+            \frac{1}{2\mathbf{i}} \left(
+                \frac{x_i}{x_j} - \frac{x_j}{x_i}
+            \right)
+        \]
+    </p>
+    <p class="fragment">
+        transcendental term ---> algebraic term
+    </p>
+</section>
+<section>
+    <p>
+    \[
+        \theta_i 
+        \;\longrightarrow\;
+        z_i = \theta_i - \mathbf{i}\, r_i
+        \;\longrightarrow\;
+        x_i = e^{\mathbf{i} z_i}
+    \]
+    <br/>
+    </p>
+    <p class="fragment fade-in-then-semi-out">
+    The synchronization equations<br/>
+    \[
+        0 = \omega_i - \sum_{j=1}^n k_{ij} \sin(\theta_i - \theta_j)
+    \]
+    <br/>
+    </p>
+    <p class="fragment fade-in">
+    becomes the Algebraic Kuramoto Equations<br/>
+    \[
+        0 = \omega_i - \sum_{j=1}^n \frac{k_{ij}}{2\mathbf{i}} 
+        \left(
+            \frac{x_i}{x_j} - \frac{x_j}{x_i}
+        \right)
+    \]
+    </p>
+
+</section>
+<section>
+    <p>Algebraic Kuramoto Equations:</p>
+    <p></p>
+    \[
+        0 = \omega_i - \sum_{j=1}^n \frac{k_{ij}}{2\mathbf{i}} 
+        \left(
+            \frac{x_i}{x_j} - \frac{x_j}{x_i}
+        \right)
+    \]
+    <br/>
+    </p>
+    <ul>
+        <li class="fragment">How many solutions?</li>
+        <li class="fragment">How to find all solutions?</li>
+        <li class="fragment">Will network topology help?</li>
+    </ul>
+
+</section>
+<section>
+    <p class="highlight-red">
+        Direct Acyclic Decomposition
+    </p>
+    <img width="350" src="../cycle3.png">
+    <img width="350" src="../dag3.png">
+
+    <p class="fragment">
+        Generalized synchronization equations:
+        \[
+            c_i - \sum_{(i,j) \in \mathcal{E}(G)} 
+            a_{ij} \frac{x_i}{x_j}
+        \]
+    </p>
+</section>
+<section>
+    <img class="stretch" src="../dac-cycle3.png">
+    <p>
+        A network of 3 oscillators has at most 6 synchronization configurations.
+    </p>
+</section>
+<section>
+    <img class="stretch" src="../dac-cycle.png">
+    <p>
+        A cycle of 5 oscillators has at most 30 synchronization configurations.
+    </p>
+</section>
+<section>
+    <p>
+        Direct acyclic decomposition:
+    </p>
+    <ul>
+        <li class="fragment">Synchronization equations</li>
+        <li class="fragment">Adjacency polytopes</li>
+        <li class="fragment">Direct acyclic subnetworks</li>
+    </ul>
 </section>
